Changed type to drupal-custom-module and made name lowercase.

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-  "name": "SPnl/nl.sp.drupal-debat",
+  "name": "spnl/nl.sp.drupal-debat",
   "description": "Inschrijvingspagina voor SP debatten",
-  "type": "drupal-module",
+  "type": "drupal-custom-module",
   "authors": [
     {
       "name": "Thomas de Graaff",
